--- a/databasesproject/Dockerfile
+++ b/databasesproject/Dockerfile
@@ -9,9 +9,9 @@ ENV PATH /app/:$PATH
 
 # install and cache app dependencies
 # COPY package.json /app/package.json
-COPY ./ /app
+COPY ./package.json /app/package.json
 RUN npm install --silent
 RUN npm install react-scripts@3.0.1 -g --silent
-
+COPY ./ /app
 # start app
 CMD ["npm","start"]
